# EdgeTx_SOUNDS_generator_via_gtts

./: .gitignore  README.md  config.json  edgetx_audio_files_map.csv  execute.ipynb  execute.py  pyproject.toml
